feat: /image/colorpreview endpoint
